# test-tauri

./: README.md  package.json
.github/workflows/: build.yml
scripts/: release.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  monitor.rs
src/pages/: Home.vue  Monitor.vue
src/router/: index.ts
